responsiveness fix on mobile (css)

--- a/css/about.css
+++ b/css/about.css
@@ -143,4 +143,11 @@ text-shadow: 0px 0px 23px #fff;
   text-shadow: 0px 0px 23px #30BFBF;
   font-size: 22px;
   }
+ 
+  .title{
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  }
 }
